src/components/forum-sub-nav/forum-sub-nav.scss
$tablet: 850px;
$smartphone: 500px;
$primaryColor: #77323b;
$blackColor: #000000;
$secondaryColor: #ffffff;
$shadow: 0px 3px 5px -3px rgba(133, 131, 131, 0.75);

// Mixin
@mixin tablet {
  @media (max-width: #{$tablet}) {
    @content;
  }
}

@mixin smartphone {
  @media (max-width: #{$smartphone}) {
    @content;
  }
}
.sub-nav {
  // position: -webkit-sticky;
  padding-top: 10px;
  z-index: 2;
  background-color: $secondaryColor;
  display: flex;
  justify-content: center;
  box-shadow: $shadow;
  margin-top: 10px;
  @include smartphone() {
    width: 100%;
    // margin-top: -40px
  } 
  .sub-nav-links {
    width: 100%;
    margin: auto;
    display: flex;
    margin: auto;
  justify-content: center;
    text-align: center;
  @include tablet(){
    &:hover{
      overflow-x: scroll;
    }
  }
    @include smartphone() {
      overflow-x: scroll;
    }
    .sub-nav-link {
      white-space: nowrap;
      cursor: pointer;
      margin: 0px 35px;
      padding: 10px 0px;
      font-weight: normal;
      font-size: 15px;
      font-weight: 300;
      line-height: 19px;
      color: #303030;
    }
  }
}

